--- a/app/src/main/res/layout/fragment_spinner.xml
+++ b/app/src/main/res/layout/fragment_spinner.xml
@@ -6,6 +6,7 @@
     >
 
     <Spinner
+
         android:id="@+id/spinnerLanguage"
         android:layout_width="200dp"
         android:layout_height="35dp"
@@ -15,5 +16,12 @@
         android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="180dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="@array/language"
+        />
+
 
 </RelativeLayout>
