--- a/app/src/main/res/layout/fragment_spinner.xml
+++ b/app/src/main/res/layout/fragment_spinner.xml
@@ -6,22 +6,15 @@
     >
 
     <Spinner
-
         android:id="@+id/spinnerLanguage"
         android:layout_width="200dp"
-        android:layout_height="35dp"
-        android:entries="@array/language"
-        android:spinnerMode="dialog"
+        android:layout_height="38dp"
+        android:spinnerMode="dropdown"
         android:background="@drawable/language_spinner"
+        android:popupBackground="@android:color/transparent"
         android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="180dp" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="@array/language"
-        />
-
+        android:layout_marginBottom="180dp"
+        android:dropDownWidth="200dp" />
 
 </RelativeLayout>
