--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,32 +17,32 @@
             android:background="@drawable/framgnet_actionbar_center">
 
             <ImageButton
+                android:id="@+id/navigationMenuButton"
                 android:layout_width="30dp"
                 android:layout_height="20dp"
-                android:id="@+id/navigationMenuButton"
-                android:background="@drawable/fragment_navigation"
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="20dp"
+                android:background="@drawable/fragment_navigation"
                 />
 
             <ImageButton
+                android:id="@+id/GPSButton"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:id="@+id/GPSButton"
-                android:background="@android:drawable/ic_dialog_map"
-                android:layout_centerVertical="true"
-                android:layout_marginRight="20dp"
                 android:layout_alignParentRight="true"
-                android:layout_marginLeft="10dp" />
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="20dp"
+                android:background="@android:drawable/ic_dialog_map" />
 
             <ImageButton
+                android:id="@+id/seachButton"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:id="@+id/seachButton"
-                android:background="@drawable/framgnt_search"
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="20dp"
-                android:layout_toLeftOf="@+id/GPSButton" />
+                android:layout_toLeftOf="@+id/GPSButton"
+                android:background="@drawable/framgnt_search" />
 
         </RelativeLayout>
 
@@ -53,11 +53,42 @@
 
     </LinearLayout>
 
-    <ImageView
+
+    <LinearLayout
         android:id="@+id/content_frame"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="left"
-        android:src="@android:drawable/presence_video_away" />
+        android:background="#eeebeb">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
+                android:src="@android:drawable/ic_menu_close_clear_cancel" />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="10dp"
+                android:src="@android:drawable/ic_popup_reminder" />
+        </RelativeLayout>
+
+
+    </LinearLayout>
+    <!--<ImageView-->
+    <!--android:id="@+id/content_frame"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent"-->
+    <!--android:layout_gravity="left"-->
+    <!--android:src="@android:drawable/presence_video_away" />-->
 
 </android.support.v4.widget.DrawerLayout>
