--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -8,12 +8,12 @@
     <EditText
         android:layout_width="290dp"
         android:layout_height="40dp"
-        android:inputType="textEmailAddress"
         android:layout_gravity="center"
         android:drawableLeft="@drawable/login_email_image"
-        android:textColor="#ffffffff"
         android:drawablePadding="5dp"
         android:hint="@string/email"
+        android:inputType="textEmailAddress"
+        android:textColor="#ffffffff"
         />
 
 
@@ -21,12 +21,12 @@
         android:layout_width="290dp"
         android:layout_height="40dp"
         android:layout_gravity="center"
-        android:inputType="textPassword"
-        android:drawablePadding="5dp"
-        android:textColor="#ffffffff"
         android:layout_marginTop="80dp"
-        android:hint="@string/password"
         android:drawableLeft="@drawable/login_password_image"
+        android:drawablePadding="5dp"
+        android:hint="@string/password"
+        android:inputType="textPassword"
+        android:textColor="#ffffffff"
         />
 
     <RelativeLayout
@@ -35,19 +35,19 @@
         android:layout_gravity="center|bottom">
 
         <Button
-            android:layout_marginBottom="30dp"
+            android:id="@+id/kakaoLoginButton"
             android:layout_width="155dp"
             android:layout_height="60dp"
-            android:id="@+id/KakaoLoginButton"
+            android:layout_marginBottom="30dp"
             android:background="@drawable/login_apibutton"
             />
 
         <Button
-            android:layout_marginBottom="30dp"
+            android:id="@+id/facebookLoginButton"
             android:layout_width="155dp"
             android:layout_height="60dp"
-            android:layout_toRightOf="@id/KakaoLoginButton"
-            android:id="@+id/FacebookLoginButton"
+            android:layout_marginBottom="30dp"
+            android:layout_toRightOf="@id/kakaoLoginButton"
             />
 
     </RelativeLayout>
