--- a/app/src/main/res/drawable/selector_normal_search.xml
+++ b/app/src/main/res/drawable/selector_normal_search.xml
@@ -1,13 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@color/colorAccent" android:state_selected="true" />
-    <item android:drawable="@color/colorPrimary" android:state_selected="false" />
-
-    <item android:drawable="@color/colorAccent" android:state_checked="true" />
-
-    <item android:drawable="@color/colorAccent" android:state_focused="true" />
-
-    <item android:drawable="@color/colorAccent" android:state_pressed="true" />
-
-
+    <item android:drawable="@drawable/tab_bg_left_selected" android:state_selected="true" />
+    <item android:drawable="@drawable/tab_bg_left_unselected" android:state_selected="false" />
 </selector>
