--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,10 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="transparent">#FFFFFFFF</color>
+    <color name="tab_color">#ffbf00</color>
+    <color name="white">#FFFFFF</color>
+    <color name="search_button">#ffbf00</color>
+    <color name="custom_search_bg">#e4e4e4</color>
+
 </resources>
