--- a/app/src/main/res/drawable/tab_bg_right_selected.xml
+++ b/app/src/main/res/drawable/tab_bg_right_selected.xml
@@ -2,7 +2,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/tab_color" />
+            <solid android:color="@color/app_theme_color" />
             <corners
                 android:bottomRightRadius="5dp"
                 android:topRightRadius="5dp" />
@@ -14,7 +14,7 @@
         android:right="3dp"
         android:top="3dp">
         <shape android:shape="rectangle">
-            <solid android:color="@color/tab_color" />
+            <solid android:color="@color/app_theme_color" />
             <corners
                 android:bottomRightRadius="5dp"
                 android:topRightRadius="5dp" />
