--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
+
 
     <android.support.v4.view.ViewPager
         android:layout_width="match_parent"
@@ -16,28 +17,37 @@
         <Button
             android:layout_width="0dp"
             android:layout_height="70dp"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:text="@string/details" />
 
         <Button
             android:layout_width="0dp"
             android:layout_height="70dp"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:text="@string/review" />
 
         <Button
             android:layout_width="0dp"
             android:layout_height="70dp"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:text="@string/share" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/app_theme_color"
+        android:orientation="vertical">
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/infoRecyclerView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
+        <ScrollView
+            android:id="@+id/scrollView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <include layout="@layout/fragment_details"></include>
+        </ScrollView>
+
 
     </LinearLayout>
 
-</LinearLayout>
+</android.support.design.widget.CoordinatorLayout>
