--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -1,13 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/coordnator_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
     <android.support.v4.view.ViewPager
         android:layout_width="match_parent"
-        android:layout_height="260dp" />
+        android:layout_height="260dp"
+        app:layout_behavior="com.jjimstay.InfoFragmentHeaderBehavior" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -38,7 +44,6 @@
         android:layout_height="match_parent"
         android:background="@color/app_theme_color"
         android:orientation="vertical">
-
         <ScrollView
             android:id="@+id/scrollView"
             android:layout_width="wrap_content"
@@ -46,8 +51,8 @@
 
             <include layout="@layout/fragment_details"></include>
         </ScrollView>
-
-
     </LinearLayout>
+    </LinearLayout>
+
 
 </android.support.design.widget.CoordinatorLayout>
