--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -11,6 +11,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
     <android.support.v4.view.ViewPager
+        android:id="@+id/info_viewpager"
         android:layout_width="match_parent"
         android:layout_height="260dp"
         app:layout_behavior="com.jjimstay.InfoFragmentHeaderBehavior" />
